--- a/Level and Assets - Albert/PRJ666Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Level and Assets - Albert/PRJ666Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -158,10 +158,10 @@ TimelineEnabledSnaps=MontageSection
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SourcesExpanded=True
+ContentBrowserTab1.SourcesExpanded=False
 ContentBrowserTab1.Locked=False
-ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
-ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
+ContentBrowserTab1.VerticalSplitter.SlotSize0=0.329205
+ContentBrowserTab1.VerticalSplitter.SlotSize1=0.670795
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000
@@ -202,12 +202,12 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Game/Level/TestMaps
+ContentBrowserTab1.SelectedPaths=/Game/Game
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Game/Level/TestMaps/Room1
+LastLevel=/Game/Game/Level/TestMaps/Tutorial1
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -2034,7 +2034,7 @@ Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
 [RootWindow]
 ScreenPosition=X=0.000 Y=92.000
 WindowSize=X=1910.000 Y=846.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [Directories2]
 UNR=../../../../Users/Stephen/Desktop/Final Project/BorderGun/BorderGun/Level and Assets - Albert/PRJ666Game/Content/Game/Level/TestMaps
