Connected menus to updated maps

--- a/HUD - Cristian/MainMenu 4.26 - Copy/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/HUD - Cristian/MainMenu 4.26 - Copy/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -683,7 +683,7 @@ BRUSH=../../../../../../Users/Cris/Documents/Unreal Projects/MainMenu/Content/
 FBX=../../../../../../Users/Cris/Documents/Unreal Projects/MainMenu/Content/
 FBXAnim=../../../../../../Users/Cris/Documents/Unreal Projects/MainMenu/Content/
 GenericImport=../../../../../../Users/Cris/Documents/Unreal Projects/MainMenu/Content/
-GenericExport=C:/Users/Stephen/Desktop/Final Project/BorderGun/BorderGun/Level and Assets - Albert/PRJ666Game/Content/Cristian_Menus
+GenericExport=C:/Users/Stephen/Desktop/Final Project/BorderGun/BorderGun/Level and Assets - Albert/PRJ666Game/Content
 GenericOpen=../../../../../../Users/Cris/Documents/Unreal Projects/MainMenu/Content/
 GenericSave=../../../../../../Users/Cris/Documents/Unreal Projects/MainMenu/Content/
 MeshImportExport=../../../../../../Users/Cris/Documents/Unreal Projects/MainMenu/Content/
@@ -1702,7 +1702,7 @@ DisplayPaths=False
 DisplayActorsCount=False
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [UMGSequencerSettings SequencerSettings]
 AutoChangeMode=None
