--- a/Level and Assets - Albert/PRJ666Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Level and Assets - Albert/PRJ666Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -210,10 +210,14 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Game/Level/TestMaps/Tutorial1
+LastLevel=/Game/Retry/TestMaps/MainMenuWorld
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Cristian_Menus/UI/MainMenu.MainMenu
+OpenAssetsAtExit=/Game/Retry/TestMaps/MainMenuWorld.MainMenuWorld:PersistentLevel.MainMenuWorld
+OpenAssetsAtExit=/Game/Cristian_Menus/UI/PauseMenu.PauseMenu
+OpenAssetsAtExit=/Game/Game/AnimationBP_Character_BP/SwatMan.SwatMan
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -1867,6 +1871,35 @@ RoomTest1_C.Replication=True
 RoomTest1_C.Actor=True
 RoomTest1_C.Input=True
 K2Node_SwitchInteger.PinOptions=True
+Options_C.Default=True
+Options_C.Appearance=True
+Options_C.Designer=True
+Options_C.Input=True
+Options_C.Interaction=True
+Options_C.Performance=True
+Options_C.Layout=True
+Options_C.Behavior=True
+Options_C.Render Transform=True
+Options_C.Accessibility=True
+Options_C.Clipping=True
+Options_C.Navigation=True
+Options_C.Localization=True
+MainMenuWorld_C.Tick=True
+MainMenuWorld_C.Replication=True
+MainMenuWorld_C.Actor=True
+MainMenuWorld_C.Input=True
+PauseMenu_C.Appearance=True
+PauseMenu_C.Designer=True
+PauseMenu_C.Input=True
+PauseMenu_C.Interaction=True
+PauseMenu_C.Performance=True
+PauseMenu_C.Layout=True
+PauseMenu_C.Behavior=True
+PauseMenu_C.Render Transform=True
+PauseMenu_C.Accessibility=True
+PauseMenu_C.Clipping=True
+PauseMenu_C.Navigation=True
+PauseMenu_C.Localization=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2010,26 +2043,26 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UI/PauseMenu
-MRUItem1=/Game/Retry/Enemies/Spawning_Platform/SpawningPlatform
-MRUItem2=/Game/Game/Level/TestMaps/RoomTest1
-MRUItem3=/Game/Retry/Enemies/Melee/BP/MeleeEnemy
-MRUItem4=/Game/Retry/Enemies/Spawning_Platform/CombatDirector
-MRUItem5=/Game/Game/Level/TestMaps/Tutorial1
-MRUItem6=/Game/Game/Menus/UI/MainMenu
-MRUItem7=/Game/Game/Level/TestMaps/Room1
-MRUItem8=/Game/Retry/Menus/UI/EndLevelScreen
-MRUItem9=/Game/Retry/LevelProps/EndTunnel
-MRUItem10=/Game/Retry/LevelProps/Dialogue
-MRUItem11=/Game/Retry/LevelProps/MovableWall
-MRUItem12=/Game/Retry/Menus/UI/Dialogue
-MRUItem13=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem14=/Game/Retry/Enemies/Ranged/AIStuff/RangedEnemyBT
-MRUItem15=/Game/Retry/Enemies/Ranged/AIStuff/RangedAi
-MRUItem16=/Game/Retry/Enemies/Ranged/BP/RangedEnemy
-MRUItem17=/Game/Retry/TestWeapons/Bullet_TEst
-MRUItem18=/Game/Retry/Enemies/Ranged/BP/RangedEnemyAnim
-MRUItem19=/Game/Retry/Enemies/Melee/AIStuff/MeleeAI
+MRUItem0=/Game/Game/AnimationBP_Character_BP/SwatMan
+MRUItem1=/Game/Cristian_Menus/UI/PauseMenu
+MRUItem2=/Game/Cristian_Menus/UI/MainMenu
+MRUItem3=/Game/Retry/TestMaps/MainMenuWorld
+MRUItem4=/Game/Cristian_Menus/UI/Options
+MRUItem5=/Game/UI/PauseMenu
+MRUItem6=/Game/Retry/Enemies/Spawning_Platform/SpawningPlatform
+MRUItem7=/Game/Game/Level/TestMaps/RoomTest1
+MRUItem8=/Game/Retry/Enemies/Melee/BP/MeleeEnemy
+MRUItem9=/Game/Retry/Enemies/Spawning_Platform/CombatDirector
+MRUItem10=/Game/Game/Level/TestMaps/Tutorial1
+MRUItem11=/Game/Game/Menus/UI/MainMenu
+MRUItem12=/Game/Game/Level/TestMaps/Room1
+MRUItem13=/Game/Retry/Menus/UI/EndLevelScreen
+MRUItem14=/Game/Retry/LevelProps/EndTunnel
+MRUItem15=/Game/Retry/LevelProps/Dialogue
+MRUItem16=/Game/Retry/LevelProps/MovableWall
+MRUItem17=/Game/Retry/Menus/UI/Dialogue
+MRUItem18=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem19=/Game/Retry/Enemies/Ranged/AIStuff/RangedEnemyBT
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
@@ -2274,6 +2307,8 @@ MRUItem19=/Game/Retry/Enemies/Melee/AIStuff/MeleeAI
 /Game/Game/Menus/UI/MainMenu.MainMenu=1
 /Game/Game/Level/TestMaps/RoomTest1.RoomTest1:PersistentLevel.RoomTest1=1
 /Game/UI/PauseMenu.PauseMenu=1
+/Game/Cristian_Menus/UI/MainMenu.MainMenu=1
+/Game/Cristian_Menus/UI/Options.Options=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2331,7 +2366,7 @@ SkinnedMeshComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting
 MeshComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SceneComponent=
-SwatMan_C="\"Object.Dead?\" "
+SwatMan_C=
 Character=
 Pawn=
 CapsuleComponent=
@@ -2357,7 +2392,7 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 MeleeAI_C="\"Object.Controller.Controller|Transform\" "
 AIController="\"Object.Controller.Controller|Transform\" "
-Controller="\"Object.Controller.Controller|Transform\" "
+Controller=
 FindJigLocation_Task_C=
 BTTask_BlueprintBase=
 BTTaskNode=
@@ -3298,12 +3333,12 @@ MaterialEditor.TimeStamp=2021.02.04-17.25.40
 MaterialEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Game/Level/TestMaps/RoomTest1
-MRUItem1=/Game/Game/Level/TestMaps/Tutorial1
-MRUItem2=/Game/Game/Level/TestMaps/Room1
-MRUItem3=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem4=/Game/Retry/TestMaps/Level/Tutorial
-MRUItem5=/Game/Retry/TestMaps/MainMenuWorld
+MRUItem0=/Game/Retry/TestMaps/MainMenuWorld
+MRUItem1=/Game/Game/Level/TestMaps/RoomTest1
+MRUItem2=/Game/Game/Level/TestMaps/Tutorial1
+MRUItem3=/Game/Game/Level/TestMaps/Room1
+MRUItem4=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem5=/Game/Retry/TestMaps/Level/Tutorial
 MRUItem6=/Game/Game/Level/TestMaps/tutorialtest1
 MRUItem7=/Game/Game/Level/TestMaps/Tutorial
 MRUItem8=/Game/Game/Level/TestMaps/Tutorialtest2
