--- a/Level and Assets - Albert/PRJ666Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Level and Assets - Albert/PRJ666Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -161,7 +161,7 @@ TimelineEnabledSnaps=MontageSection
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SourcesExpanded=False
+ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.329205
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.670795
@@ -205,19 +205,15 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Game/Level/TestMaps
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Retry/TestMaps/MainMenuWorld
+LastLevel=/Game/Game/Level/TestMaps/Tutorial1
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Cristian_Menus/UI/MainMenu.MainMenu
-OpenAssetsAtExit=/Game/Retry/TestMaps/MainMenuWorld.MainMenuWorld:PersistentLevel.MainMenuWorld
-OpenAssetsAtExit=/Game/Cristian_Menus/UI/PauseMenu.PauseMenu
-OpenAssetsAtExit=/Game/Game/AnimationBP_Character_BP/SwatMan.SwatMan
+CleanShutdown=True
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -2360,7 +2356,7 @@ NavMovementComponent="\"Object.Character Movement (Rotation Settings).RotationRa
 MovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" "
 ActorComponent=
 WorldSettings="\"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Broadphase.BroadphaseSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.OutputUVs\" "
-Info="\"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Broadphase.BroadphaseSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.OutputUVs\" "
+Info=
 SkeletalMeshComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SkinnedMeshComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -2470,10 +2466,10 @@ Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
 [RootWindow]
 ScreenPosition=X=481.000 Y=46.000
 WindowSize=X=947.000 Y=938.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [Directories2]
-UNR=../../../../Users/Stephen/Desktop/Final Project/BorderGun/BorderGun/Level and Assets - Albert/PRJ666Game/Content/Game/Level/TestMaps
+UNR=C:/Users/Albert/BulletHell/BorderGun/Level and Assets - Albert/PRJ666Game/Content/Game/Level/TestMaps
 BRUSH=../../../../Users/Stephen/Desktop/Final Project/Workstation/Content/
 FBX=../../../../Users/Stephen/Desktop/Final Project/Workstation/Content/
 FBXAnim=../../../../Users/Stephen/Desktop/Final Project/Workstation/Content/
@@ -3333,9 +3329,9 @@ MaterialEditor.TimeStamp=2021.02.04-17.25.40
 MaterialEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Retry/TestMaps/MainMenuWorld
-MRUItem1=/Game/Game/Level/TestMaps/RoomTest1
-MRUItem2=/Game/Game/Level/TestMaps/Tutorial1
+MRUItem0=/Game/Game/Level/TestMaps/Tutorial1
+MRUItem1=/Game/Retry/TestMaps/MainMenuWorld
+MRUItem2=/Game/Game/Level/TestMaps/RoomTest1
 MRUItem3=/Game/Game/Level/TestMaps/Room1
 MRUItem4=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 MRUItem5=/Game/Retry/TestMaps/Level/Tutorial
@@ -3556,6 +3552,7 @@ UdpMessagingSettings=True
 WmfMediaSettings=True
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 RecentlyPlaced=/Game/Retry/LevelProps/Dialogue.Dialogue;
 RecentlyPlaced=/Game/Retry/LevelProps/MovableWall.MovableWall;
 RecentlyPlaced=/Game/Game/Level/TestMaps/Blue_Floor_Mat.Blue_Floor_Mat;
@@ -3575,7 +3572,6 @@ RecentlyPlaced=/Game/StarterContent/Props/SM_DoorFrame.SM_DoorFrame;
 RecentlyPlaced=/Game/StarterContent/Props/SM_Door.SM_Door;
 RecentlyPlaced=/Game/StarterContent/Architecture/Wall_400x400.Wall_400x400;
 RecentlyPlaced=/Game/StarterContent/Architecture/Wall_500x500.Wall_500x500;
-RecentlyPlaced=/Game/StarterContent/Architecture/Wall_400x200.Wall_400x200;
 
 [/Script/UnrealEd.AnimationBlueprintEditorOptions]
 bHideUnrelatedNodes=False
