--- a/Level and Assets - Albert/PRJ666Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Level and Assets - Albert/PRJ666Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -213,7 +213,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 LastLevel=/Game/Game/Level/TestMaps/Tutorial1
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -2466,7 +2466,7 @@ Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
 [RootWindow]
 ScreenPosition=X=481.000 Y=46.000
 WindowSize=X=947.000 Y=938.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [Directories2]
 UNR=C:/Users/Albert/BulletHell/BorderGun/Level and Assets - Albert/PRJ666Game/Content/Game/Level/TestMaps
