--- a/Level and Assets - Albert/PRJ666Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Level and Assets - Albert/PRJ666Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -94,7 +94,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1280,Y=720)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-7GA511J
 LastExecutedLaunchName=DESKTOP-7GA511J
 LastExecutedPIEPreviewDevice=
@@ -211,11 +211,12 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Game/Level/TestMaps/RoomTest1
+LastLevel=/Game/Game/Level/TestMaps/Room5
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Retry/Enemies/Ranged/BP/RangedEnemy.RangedEnemy
+OpenAssetsAtExit=/Game/Retry/Enemies/Ranged/Model/Arrow/Arrow.Arrow
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -2053,26 +2054,26 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Retry/Enemies/Ranged/BP/RangedEnemy
-MRUItem1=/Game/Retry/LevelProps/MovableWall
-MRUItem2=/Game/Game/Level/TestMaps/RoomTest1
-MRUItem3=/Game/Game/AnimationBP_Character_BP/SwatMan
-MRUItem4=/Game/Cristian_Menus/UI/PauseMenu
-MRUItem5=/Game/Cristian_Menus/UI/MainMenu
-MRUItem6=/Game/Retry/TestMaps/MainMenuWorld
-MRUItem7=/Game/Cristian_Menus/UI/Options
-MRUItem8=/Game/UI/PauseMenu
-MRUItem9=/Game/Retry/Enemies/Spawning_Platform/SpawningPlatform
-MRUItem10=/Game/Retry/Enemies/Melee/BP/MeleeEnemy
-MRUItem11=/Game/Retry/Enemies/Spawning_Platform/CombatDirector
-MRUItem12=/Game/Game/Level/TestMaps/Tutorial1
-MRUItem13=/Game/Game/Menus/UI/MainMenu
-MRUItem14=/Game/Game/Level/TestMaps/Room1
-MRUItem15=/Game/Retry/Menus/UI/EndLevelScreen
-MRUItem16=/Game/Retry/LevelProps/EndTunnel
-MRUItem17=/Game/Retry/LevelProps/Dialogue
-MRUItem18=/Game/Retry/Menus/UI/Dialogue
-MRUItem19=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem0=/Game/Retry/Enemies/Ranged/Model/Arrow/Arrow
+MRUItem1=/Game/Game/Level/TestMaps/Room5
+MRUItem2=/Game/Game/Level/TestMaps/RoomTest2
+MRUItem3=/Game/Retry/Enemies/Ranged/BP/RangedEnemy
+MRUItem4=/Game/Retry/LevelProps/MovableWall
+MRUItem5=/Game/Game/Level/TestMaps/RoomTest1
+MRUItem6=/Game/Game/AnimationBP_Character_BP/SwatMan
+MRUItem7=/Game/Cristian_Menus/UI/PauseMenu
+MRUItem8=/Game/Cristian_Menus/UI/MainMenu
+MRUItem9=/Game/Retry/TestMaps/MainMenuWorld
+MRUItem10=/Game/Cristian_Menus/UI/Options
+MRUItem11=/Game/UI/PauseMenu
+MRUItem12=/Game/Retry/Enemies/Spawning_Platform/SpawningPlatform
+MRUItem13=/Game/Retry/Enemies/Melee/BP/MeleeEnemy
+MRUItem14=/Game/Retry/Enemies/Spawning_Platform/CombatDirector
+MRUItem15=/Game/Game/Level/TestMaps/Tutorial1
+MRUItem16=/Game/Game/Menus/UI/MainMenu
+MRUItem17=/Game/Game/Level/TestMaps/Room1
+MRUItem18=/Game/Retry/Menus/UI/EndLevelScreen
+MRUItem19=/Game/Retry/LevelProps/EndTunnel
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
@@ -2367,19 +2368,19 @@ AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 CharacterMovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" "
 PawnMovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" "
 NavMovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" "
-MovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" "
-ActorComponent=
+MovementComponent="\"Object.Velocity\" "
+ActorComponent="\"Object.Velocity\" "
 WorldSettings="\"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Broadphase.BroadphaseSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.OutputUVs\" "
 Info=
 SkeletalMeshComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SkinnedMeshComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent=
-PrimitiveComponent=
-SceneComponent=
+PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Rendering.CustomPrimitiveData\" "
+SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Rendering.CustomPrimitiveData\" "
 SwatMan_C=
 Character=
 Pawn=
-CapsuleComponent=
+CapsuleComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Rendering.CustomPrimitiveData\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Rendering.CustomPrimitiveData\" "
 Movement_C=
 AnimInstance="\"Object.Dea D?\" "
@@ -3343,18 +3344,18 @@ MaterialEditor.TimeStamp=2021.02.04-17.25.40
 MaterialEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Game/Level/TestMaps/RoomTest1
-MRUItem1=/Game/Game/Level/TestMaps/Tutorial1
-MRUItem2=/Game/Retry/TestMaps/MainMenuWorld
-MRUItem3=/Game/Game/Level/TestMaps/Room1
-MRUItem4=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem5=/Game/Retry/TestMaps/Level/Tutorial
-MRUItem6=/Game/Game/Level/TestMaps/tutorialtest1
-MRUItem7=/Game/Game/Level/TestMaps/Tutorial
-MRUItem8=/Game/Game/Level/TestMaps/Tutorialtest2
-MRUItem9=/Game/Retry/Level/TestMaps/Tutorialtest2
-MRUItem10=/Game/Retry/Level/TestMaps/Tutorial
-MRUItem11=/Game/Maps/tutorialtest1
+MRUItem0=/Game/Game/Level/TestMaps/Room5
+MRUItem1=/Game/Game/Level/TestMaps/RoomTest2
+MRUItem2=/Game/Game/Level/TestMaps/RoomTest1
+MRUItem3=/Game/Game/Level/TestMaps/Tutorial1
+MRUItem4=/Game/Retry/TestMaps/MainMenuWorld
+MRUItem5=/Game/Game/Level/TestMaps/Room1
+MRUItem6=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem7=/Game/Retry/TestMaps/Level/Tutorial
+MRUItem8=/Game/Game/Level/TestMaps/tutorialtest1
+MRUItem9=/Game/Game/Level/TestMaps/Tutorial
+MRUItem10=/Game/Game/Level/TestMaps/Tutorialtest2
+MRUItem11=/Game/Retry/Level/TestMaps/Tutorialtest2
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
