Added Cristians updated menus

--- a/Level and Assets - Albert/PRJ666Game(MenuFixed)/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Level and Assets - Albert/PRJ666Game(MenuFixed)/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -66,7 +66,7 @@ EnablePIEEnterAndExitSounds=False
 PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
-NewWindowPosition=(X=-1,Y=-1)
+NewWindowPosition=(X=320,Y=160)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -94,13 +94,14 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1280,Y=720)
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-7GA511J
 LastExecutedLaunchName=DESKTOP-7GA511J
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-LastExecutedPlayModeType=PlayMode_InNewProcess
+LastExecutedPlayModeType=PlayMode_InEditorFloating
+MultipleInstancePositions=(X=320,Y=160)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -206,7 +207,7 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Game/AnimationBP_Character_BP
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
@@ -1900,6 +1901,7 @@ PauseMenu_C.Localization=True
 MainMenu_C.Tick=True
 MainMenu_C.Replication=True
 MainMenu_C.Actor=True
+Tutorial1_C.Default=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2043,10 +2045,10 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Game/Menus/UI/MainMenu
-MRUItem1=/Game/Cristian_Menus/UI/Options
-MRUItem2=/Game/Cristian_Menus/UI/PauseMenu
-MRUItem3=/Game/Game/AnimationBP_Character_BP/SwatMan
+MRUItem0=/Game/Game/AnimationBP_Character_BP/SwatMan
+MRUItem1=/Game/Game/Menus/UI/MainMenu
+MRUItem2=/Game/Cristian_Menus/UI/Options
+MRUItem3=/Game/Cristian_Menus/UI/PauseMenu
 MRUItem4=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
 MRUItem5=/Game/Cristian_Menus/UI/MainMenu
 MRUItem6=/Game/Game/Level/TestMaps/MainMenu
@@ -2480,7 +2482,7 @@ BRUSH=../../../../Users/Stephen/Desktop/Final Project/Workstation/Content/
 FBX=../../../../Users/Stephen/Desktop/Final Project/Workstation/Content/
 FBXAnim=../../../../Users/Stephen/Desktop/Final Project/Workstation/Content/
 GenericImport=../../../../Users/Stephen/Desktop/DoomMandem.png
-GenericExport=D:/Unreal/MyProject2/Content
+GenericExport=C:/Users/Stephen/Desktop/Final Project/BorderGun/BorderGun/Level and Assets - Albert/PRJ666Game/Content/Cristian_Menus_Updated
 GenericOpen=../../../../Users/Stephen/Desktop/Final Project/Workstation/Content/
 GenericSave=../../../../Users/Stephen/Desktop/Final Project/Workstation/Content/
 MeshImportExport=../../../../Users/Stephen/Desktop/Final Project/Workstation/Content/
