--- a/Level and Assets - Albert/PRJ666Game/Config/DefaultInput.ini
+++ b/Level and Assets - Albert/PRJ666Game/Config/DefaultInput.ini
@@ -153,6 +153,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="DoubleJump",bShift=True,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="AirDodgeBack",bShift=True,bCtrl=False,bAlt=False,bCmd=False,Key=S)
 +ActionMappings=(ActionName="Reload",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
++ActionMappings=(ActionName="PauseMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
