--- a/Level and Assets - Albert/PRJ666Game(MenuFixed)/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Level and Assets - Albert/PRJ666Game(MenuFixed)/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -207,7 +207,7 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Game/AnimationBP_Character_BP
+ContentBrowserTab1.SelectedPaths=/Game/Retry/Enemies/Spawning_Platform
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
@@ -216,6 +216,7 @@ LastLevel=/Game/Game/Level/TestMaps/Tutorial1
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Retry/Enemies/Spawning_Platform/SpawningPlatform.SpawningPlatform
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -2045,18 +2046,18 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Game/AnimationBP_Character_BP/SwatMan
-MRUItem1=/Game/Game/Menus/UI/MainMenu
-MRUItem2=/Game/Cristian_Menus/UI/Options
-MRUItem3=/Game/Cristian_Menus/UI/PauseMenu
-MRUItem4=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem5=/Game/Cristian_Menus/UI/MainMenu
-MRUItem6=/Game/Game/Level/TestMaps/MainMenu
-MRUItem7=/Game/Game/Level/TestMaps/Tutorial
-MRUItem8=/Game/NewLevelSequence
-MRUItem9=/Game/Retry/TestMaps/MainMenuWorld
-MRUItem10=/Game/UI/PauseMenu
-MRUItem11=/Game/Retry/Enemies/Spawning_Platform/SpawningPlatform
+MRUItem0=/Game/Retry/Enemies/Spawning_Platform/SpawningPlatform
+MRUItem1=/Game/Game/AnimationBP_Character_BP/SwatMan
+MRUItem2=/Game/Game/Menus/UI/MainMenu
+MRUItem3=/Game/Cristian_Menus/UI/Options
+MRUItem4=/Game/Cristian_Menus/UI/PauseMenu
+MRUItem5=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem6=/Game/Cristian_Menus/UI/MainMenu
+MRUItem7=/Game/Game/Level/TestMaps/MainMenu
+MRUItem8=/Game/Game/Level/TestMaps/Tutorial
+MRUItem9=/Game/NewLevelSequence
+MRUItem10=/Game/Retry/TestMaps/MainMenuWorld
+MRUItem11=/Game/UI/PauseMenu
 MRUItem12=/Game/Game/Level/TestMaps/RoomTest1
 MRUItem13=/Game/Retry/Enemies/Melee/BP/MeleeEnemy
 MRUItem14=/Game/Retry/Enemies/Spawning_Platform/CombatDirector
