--- a/Level and Assets - Albert/PRJ666Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Level and Assets - Albert/PRJ666Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -205,7 +205,7 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Retry/TestMaps
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
@@ -2466,10 +2466,10 @@ Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
 [RootWindow]
 ScreenPosition=X=481.000 Y=46.000
 WindowSize=X=947.000 Y=938.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [Directories2]
-UNR=../../../../Users/Stephen/Desktop/Final Project/BorderGun/BorderGun/Level and Assets - Albert/PRJ666Game/Content/Game/Level/TestMaps
+UNR=C:/Users/User/Documents/GitHub/BorderGun/Level and Assets - Albert/PRJ666Game/Content/Retry/TestMaps
 BRUSH=../../../../Users/Stephen/Desktop/Final Project/Workstation/Content/
 FBX=../../../../Users/Stephen/Desktop/Final Project/Workstation/Content/
 FBXAnim=../../../../Users/Stephen/Desktop/Final Project/Workstation/Content/
