--- a/Level and Assets - Albert/PRJ666Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Level and Assets - Albert/PRJ666Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -213,7 +213,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 LastLevel=/Game/Retry/TestMaps/MainMenuWorld
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 FbxImportUI.Mesh=True
