--- a/Level and Assets - Albert/PRJ666Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Level and Assets - Albert/PRJ666Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -94,14 +94,14 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1910,Y=1046)
+LastSize=(X=1910,Y=1006)
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-7GA511J
 LastExecutedLaunchName=DESKTOP-7GA511J
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 NewWindowWidth=1910
-NewWindowHeight=1046
+NewWindowHeight=1006
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 MultipleInstancePositions=(X=0,Y=0)
 
@@ -214,7 +214,7 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Game/Level/TestMaps/RoomTest1
+LastLevel=/Game/Game/Level/TestMaps/RoomTest2
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -2169,26 +2169,26 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Game/Level/TestMaps/RoomTest1
-MRUItem1=/Game/Cristian_Menus/UI/Options
-MRUItem2=/Game/Game/AnimationBP_Character_BP/SwatMan
-MRUItem3=/Game/Retry/LevelProps/Dialogue
-MRUItem4=/Game/Retry/Menus/UI/PlayerUI
-MRUItem5=/Game/Cristian_Menus/UI/PauseMenu
-MRUItem6=/Game/Cristian_Menus_Updated/Cristian_Menus/UI/PauseMenu
-MRUItem7=/Game/Cristian_Menus/UI/MainMenu
-MRUItem8=/Game/Cristian_Menus_Updated/Cristian_Menus/UI/MainMenu
-MRUItem9=/Game/Retry/TestMaps/MainMenuWorld
-MRUItem10=/Game/Cristian_Menus_Updated/Cristian_Menus/UI/Options
-MRUItem11=/Game/Retry/Pickups/HealthPacke
-MRUItem12=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem13=/Game/Retry/Enemies/Melee/BP/MeleeEnemy
-MRUItem14=/Game/Retry/Enemies/Ranged/BP/RangedEnemy
-MRUItem15=/Game/Retry/TestWeapons/PistolBullet
-MRUItem16=/Game/Retry/Enemies/Ranged/Model/Arrow/Arrow
-MRUItem17=/Game/Retry/Enemies/Ranged/Model/Arrow/Mat_Ribbon
-MRUItem18=/Game/Retry/Enemies/Ranged/Model/Arrow/P_Ribbon
-MRUItem19=/Game/Retry/Enemies/Ranged/Model/Arrow/Mat_Sparks
+MRUItem0=/Game/Game/Level/TestMaps/RoomTest2
+MRUItem1=/Game/Game/Level/TestMaps/RoomTest1
+MRUItem2=/Game/Cristian_Menus/UI/Options
+MRUItem3=/Game/Game/AnimationBP_Character_BP/SwatMan
+MRUItem4=/Game/Retry/LevelProps/Dialogue
+MRUItem5=/Game/Retry/Menus/UI/PlayerUI
+MRUItem6=/Game/Cristian_Menus/UI/PauseMenu
+MRUItem7=/Game/Cristian_Menus_Updated/Cristian_Menus/UI/PauseMenu
+MRUItem8=/Game/Cristian_Menus/UI/MainMenu
+MRUItem9=/Game/Cristian_Menus_Updated/Cristian_Menus/UI/MainMenu
+MRUItem10=/Game/Retry/TestMaps/MainMenuWorld
+MRUItem11=/Game/Cristian_Menus_Updated/Cristian_Menus/UI/Options
+MRUItem12=/Game/Retry/Pickups/HealthPacke
+MRUItem13=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem14=/Game/Retry/Enemies/Melee/BP/MeleeEnemy
+MRUItem15=/Game/Retry/Enemies/Ranged/BP/RangedEnemy
+MRUItem16=/Game/Retry/TestWeapons/PistolBullet
+MRUItem17=/Game/Retry/Enemies/Ranged/Model/Arrow/Arrow
+MRUItem18=/Game/Retry/Enemies/Ranged/Model/Arrow/Mat_Ribbon
+MRUItem19=/Game/Retry/Enemies/Ranged/Model/Arrow/P_Ribbon
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
@@ -2490,7 +2490,7 @@ NodeTemplateCacheCapMB=20.000000
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
-Object="\"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Object=
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[34]\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
@@ -2643,7 +2643,7 @@ WindowSize=X=947.000 Y=938.000
 InitiallyMaximized=True
 
 [Directories2]
-UNR=../../../../Users/Stephen/Desktop/Final Project/BorderGun/BorderGun/Level and Assets - Albert/PRJ666Game/Content/Game/Level/TestMaps
+UNR=C:/Users/Albert/BulletHell/BorderGun/Level and Assets - Albert/PRJ666Game/Content/Game/Level/TestMaps
 BRUSH=../../../../Users/Stephen/Desktop/Final Project/Workstation/Content/
 FBX=../../../../Users/Stephen/Desktop/Final Project/Workstation/Content/
 FBXAnim=../../../../Users/Stephen/Desktop/Final Project/Workstation/Content/
@@ -3507,18 +3507,18 @@ DistCurveEditor.TimeStamp=2021.02.04-17.25.37
 DistCurveEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Game/Level/TestMaps/RoomTest1
-MRUItem1=/Game/Game/Level/TestMaps/Tutorial1
-MRUItem2=/Game/Retry/TestMaps/MainMenuWorld
-MRUItem3=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem4=/Game/Game/Level/TestMaps/RoomTest4
-MRUItem5=/Game/Game/Level/TestMaps/Room5
-MRUItem6=/Game/Game/Level/TestMaps/Room3
-MRUItem7=/Game/Game/Level/TestMaps/Room1
-MRUItem8=/Game/Retry/TestMaps/Level/Tutorial
-MRUItem9=/Game/Game/Level/TestMaps/tutorialtest1
-MRUItem10=/Game/Game/Level/TestMaps/Tutorial
-MRUItem11=/Game/Game/Level/TestMaps/Tutorialtest2
+MRUItem0=/Game/Game/Level/TestMaps/RoomTest2
+MRUItem1=/Game/Game/Level/TestMaps/RoomTest1
+MRUItem2=/Game/Game/Level/TestMaps/Tutorial1
+MRUItem3=/Game/Retry/TestMaps/MainMenuWorld
+MRUItem4=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem5=/Game/Game/Level/TestMaps/RoomTest4
+MRUItem6=/Game/Game/Level/TestMaps/Room5
+MRUItem7=/Game/Game/Level/TestMaps/Room3
+MRUItem8=/Game/Game/Level/TestMaps/Room1
+MRUItem9=/Game/Retry/TestMaps/Level/Tutorial
+MRUItem10=/Game/Game/Level/TestMaps/tutorialtest1
+MRUItem11=/Game/Game/Level/TestMaps/Tutorial
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
